--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "react-router-dom": "^5.2.0",
     "react-tooltip": "^4.2.10",
     "react-transition-group": "^4.4.1",
+    "socket.io-client": "^3.0.4",
     "use-immer": "^0.4.1",
     "webpack": "^4.32.2",
     "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.5.1"
+    "webpack-dev-server": "^3.11.0"
   }
 }
