--- a/package.json
+++ b/package.json
@@ -4,19 +4,31 @@
   "description": "",
   "main": "test.js",
   "scripts": {
-    "dev": "webpack-dev-server",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "npm-run-all -s generate webpackDev",
+    "webpackDev": "webpack-dev-server",
+    "build": "npm-run-all generate webpackBuild",
+    "webpackBuild": "webpack",
+    "generate": "babel-node --presets=@babel/preset-react,@babel/preset-env generateHtml.js",
+    "previewDist": "node previewDist"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@babel/core": "^7.12.3",
+    "@babel/node": "^7.12.10",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.1",
     "axios": "^0.21.0",
     "babel-loader": "^8.1.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "dotenv-webpack": "^6.0.0",
+    "express": "^4.17.1",
+    "fs-extra": "^9.0.1",
+    "html-webpack-harddisk-plugin": "^1.0.2",
+    "html-webpack-plugin": "^4.5.0",
     "immer": "^7.0.14",
+    "npm-run-all": "^4.1.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-markdown": "^5.0.2",
